--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,3 +37,29 @@ jobs:
           name: ttyd.${{ matrix.target }}
           path: build/ttyd*
 
+  macos:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-14
+            arch: arm64
+          - os: macos-13
+            arch: x86_64
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          brew install cmake json-c libwebsockets libuv
+      - name: Build for macOS (${{ matrix.arch }})
+        run: |
+          mkdir -p build && cd build
+          cmake ..
+          make
+          file ttyd
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ttyd.macos-${{ matrix.arch }}
+          path: build/ttyd
+
