Implement Phase 3: Global memory cap with soft-drop enforcement
Data Structures:
- Add global_pending_bytes to track total memory across all clients
- Add max_global_pending_bytes configurable cap (default: 8 MB)
- Add soft_dropped_bytes per-client counter for diagnostics
- Add SOFT_DROP_THRESHOLD constant (40% of per-client cap = 400KB)

CLI Configuration:
- Add --max-global-pending-bytes (-G) option
- Default: 8388608 bytes (8 MB)
- Allows tuning for different deployment scenarios

Global Cap Enforcement (Soft Drop):
- Calculate projected global memory before each broadcast
- If projected > max_global_pending_bytes:
  - Skip clients with pending_bytes > SOFT_DROP_THRESHOLD (40%)
  - Track dropped bytes per client in soft_dropped_bytes
  - Log at notice level when pressure occurs
- Soft-drop prevents memory pressure WITHOUT disconnecting clients
- Clients can recover as they drain their queues

Memory Accounting:
- Increment global_pending_bytes in shared_client_buffers_enqueue()
- Decrement global_pending_bytes in shared_client_buffers_pop()
- Only count non-snapshot_pending clients
- Guard against underflow in pop operation

Enhanced Logging:
- Notice level when global cap pressure or soft drops occur
- Debug level includes global memory stats in all broadcasts
- Timeout logs now include idle time for better diagnostics

Testing:
- Add test_global_cap_soft_drop() test case
- Verifies soft-drop activates under pressure
- Verifies clients above threshold are skipped
- Verifies global counter excludes soft-dropped bytes
- All 13 regression tests passing

This completes the full Snapshot Timers Plan implementation:
- Phase 1: Continuous read ✅
- Phase 2: Timeout protection ✅
- Phase 3: Global cap with soft-drop ✅

--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,7 @@ build
 # Project files
 !init.d
 # SpecStory explanation file
-.specstory/.what-is-this.md
+.specstory/*
 .repomix-output.txt
+# SpecStory explanation file
+.specstory/.what-is-this.md
